# antigen-hs

./: .travis.yml  Antigen.hs  LICENSE.txt  Makefile  README.md  antigen-hs.cabal  init.zsh
tests/: .zshenv  basic.t  compdef.t
tests/configs/: Basic.hs  Compdef.hs
tests/repos/compdef/: _compd_file.sh  plugin.zsh
