name:                antigen-hs
version:             0.1.0.0
synopsis:            A fast zsh plugin manager
description:         Please see README.md
homepage:            https://github.com/Tarrasch/antigen-hs#readme
license:             MIT
license-file:        LICENSE.txt
author:              Arash Rouhani
maintainer:          arash@spotify.com
copyright:           2014 Arash Rouhani
category:            Tools
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Antigen
  default-language:    Haskell2010
  build-depends:       base >= 4.6 && < 5
                     , text -any
                     , directory -any
                     , filepath -any
                     , process >= 1.2
